--- a/dashboard.css
+++ b/dashboard.css
@@ -6,7 +6,7 @@
   font-family: "Poppins", sans-serif;
 }
 .highlight {
-  background-color: yellow;
+  background-color: #edae10;
 }
 :root {
   --primary-color: #edae10;
@@ -437,7 +437,40 @@ nav.close ~ .dashboard .top {
 .table tbody tr {
   margin-bottom: 20px;
 }
+#profile-container {
+  display: flex;
+  align-items: center;
+}
 
+.profile-image-container {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 5px;
+}
+
+#profile-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#nameemail {
+  margin-right: 10px; /* Adjusted margin for space */
+}
+#welcome-message {
+  font-weight: bold;
+  
+}
+
+#welcome-message {
+  font-size: 16px; /* Adjust font size as needed */
+  color: var(--text-color);
+}
+#welcome-message1 {
+  font-size: 12px; /* Adjust font size as needed */
+  color: var(--text-color);
+}
 @media (max-width: 1000px) {
   nav {
     width: 73px;
@@ -480,68 +513,6 @@ nav.close ~ .dashboard .top {
   .activity .activity-data {
     overflow-x: scroll;
   }
-}
-
-/*#nameemail {
-  display: flex;
-  flex-direction: column;
-}
-#welcome-message {
-  font-size: 22px;
-  font-weight: bold;
-  color: #333;
-  margin: 0;
-}
-#welcome-message1 {
-  font-size: 14px;
-  color: #666;
-  margin: 0;
-}
-.profile-image-container {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-#profile-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}*/
-#profile-container {
-  display: flex;
-  align-items: center;
-}
-
-.profile-image-container {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  overflow: hidden;
-  margin-right: 5px;
-}
-
-#profile-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-#nameemail {
-  margin-right: 10px; /* Adjusted margin for space */
-}
-#welcome-message {
-  font-weight: bold;
-  
-}
-
-#welcome-message {
-  font-size: 16px; /* Adjust font size as needed */
-  color: var(--text-color);
-}
-#welcome-message1 {
-  font-size: 12px; /* Adjust font size as needed */
-  color: var(--text-color);
 }
 @media only screen and (max-width: 600px) {
   .profile-image-container {
