--- a/dashboard.css
+++ b/dashboard.css
@@ -777,7 +777,8 @@ nav.close ~ .dashboard .top {
   padding: 10px;
   font-size: 24px;
   height: 50px;
-  width: 300px; /* Increase font size */
+  width: calc(100%); /* Subtracting padding from the container */
+   /*Increase font size */
   background-color: #4caf50;
   color: white;
   border: none;
